--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
+  <!-- <script type="text/javascript" src="node_modules/auth0-js/build/auth0.min.js"></script> -->
   <app-root></app-root>
 </body>
 </html>
+
+
+
+
